--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>resept</title>
+</head>
+<body>
+  
+    <h1>Lasagne</h1>
+    <ul>
+       <li><a href="index.html">Lasagne</a></li> 
+       <li><a href="pag2.html">Lasagne</a></li> 
+       <li><a href="pag3.html">Lasagne</a></li> 
+    </ul>
+
+    <img src="images/lasagne.jpg">
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 middelgrote uien</li>
+        <li>1 teen knoflook</li>
+        <li>150 g bleekselderij</li>
+        <li>100 g wortel</li>
+        <li>2 el milde olijfolie</li>
+        <li>125 g spekreepjes</li>
+        <li>500 g half-om-halfgehakt</li>
+        <li>70 g tomatenputee</li>
+        <li>700 ml volle melk</li>
+        <li>690 g passata di pomodoro fijn gekruid</li>
+        <li>50 g ongezouten roomboter</li>
+        <li>60 g tarwebloem</li>
+        <li>150 g parmigiano reggiano</li>
+        <li>250 g verse lasagne all'uovo</li>
+    </ul>
+
+    <h2>bereiding</h2>
+    <ol>
+       <li>Snipper de ui en snijd de knoflook fijn. Snijd de bleekselderij en wortel in blokjes van een ½ cm. Verhit de olie in een hapjespan en fruit de ui, knoflook, groente en spekreepjes 5 min. op laag vuur. Voeg het gehakt toe en bak op middelhoog vuur in 5 min. rul. Voeg de tomatenpuree toe en bak 2 min. mee. Voeg 200 ml melk toe (per 4 personen) en laat al roerend op hoog vuur bijna helemaal inkoken, dit duurt ca. 5 min.</li> 
+       <li>Voeg de passata toe en breng aan de kook. Zet het vuur laag en laat met de deksel half op de pan 45 min. zachtjes koken.</li>
+       <li>Maak ondertussen de bechamelsaus. Smelt daarvoor op laag vuur de boter in een steelpan met dikke bodem. Meng de bloem erdoor en laat op laag vuur 3 min. gaar worden. Voeg al roerend met een garde de rest van de melk in delen toe. Voeg pas de volgende scheut toe als de vorige helemaal is opgenomen. Breng aan de kook. Laat de saus op laag vuur 2-3 min. zachtjes koken. Breng op smaak met peper en eventueel zout.</li>
+       <li>Verwarm de oven voor op 180 °C. Rasp de Parmezaanse kaas. Maak laagjes in de ovenschaal van achtereenvolgens tomatensaus, lasagnebladen, tomatensaus, bechamelsaus en geraspte kaas. Herhaal 3 keer en eindig met een laagje bechamelsaus en wat geraspte kaas. Bak de lasagne ca. 40 min. in het midden van de oven.</li>
+    </ol>
+</body>
+
+</html>
